--- a/views/board.ejs
+++ b/views/board.ejs
@@ -18,7 +18,7 @@
       <li class="main-list__item">
         <div class="message">
           <p class="message__title"><%= messageItem.message %></p>
-          <p class="message__date"><%= messageItem.created_at %></p>
+          <p class="message__date"><%= messageItem.createdAt %></p>
         </div>
       </li>
       <% }); %>
